# BOOTCAMP-MM

./: 1 - Setting up the IDE (IMPORTANT).md  3 - Cloning the Bootcamp Material.md
Classes/: CMakeLists.txt
Linked Lists/: CMakeLists.txt
